Bug Fixes + Changed Global Font
- Changed global font to Poppins in App.css
- Fixed product image misalignment
- Fixed product text misalignment and color mismatch
- Added color attribute

Issues to consider:
- Some css files conflict with each other (menu + product) .css
- Images must be 350x350

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@font-face{
+  font-family: 'Poppins';
+  src: url('./Components/Assets/fonts/Poppins-Regular.ttf') format('truetype');
+}
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
+
 .App {
   text-align: center;
 }
