--- a/src/Components/NavBar/Menu.css
+++ b/src/Components/NavBar/Menu.css
@@ -21,7 +21,7 @@ h1{
     align-items: center;
 }
 
-.title{
+.Brand{
     text-decoration: none;
     font-weight: bolder;
     color: white;
