--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -1,21 +1,23 @@
-@font-face{
-    font-family: 'Poppins';
-    src: url('../Assets/fonts/Poppins-Regular.ttf') format('truetype');
-}
 
 *{
-    font-family: 'Poppins', sans-serif;
+    color: black;
 }
 
 .product-container{
+    border: 1px solid black;
+    border-radius: 5px;
     display:flex;
     flex-direction: column;
     align-items: center;
-
     width: 200px;
+}
 
-    border: 1px solid black;
-    border-radius: 5px;
+.product-text{
+    margin: 0 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*justify-content: space-evenly;*/
 }
 
 .product-image{
@@ -27,13 +29,14 @@
 
 .product-image img{
     align-self: center;
+    margin: 0;
     width: 100%;
     height: 100%;
 }
 
 
 .description{
-    background-color: rgba(172, 133, 233, 0.2);
+    background-color: rgba(172, 133, 233, 0.8);
     position: absolute;
     top:0;
     left: 0;
@@ -46,17 +49,18 @@
 
 .product-image:hover > .description{
     display:block;
-    animation: slideUp .3s ease;
+    animation: slideUp .2s ease;
 }
 
 .title{
-    margin: 0 10px;
+    margin: 3px;
     font-size: 20px;
-    font-weight:500;
+    font-weight:bold;
     text-align: center;
 }
 
 .brand{
+    margin: 3px;
     color: black;
     font-size: 18px;
     font-weight: lighter;
@@ -64,6 +68,7 @@
 }
 
 .price{
+    margin: 3px;
     font-size: 23px;
     font-weight: normal;
     text-align: center;
@@ -80,13 +85,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     margin: 15px;
 }
 
 .icon img{
-    width: 60%;
-    height: 60%;
+    width: 50%;
+    height: 50%;
 }
 
 .icon:hover{
